<?xml version="1.0"?>
<package format="2">
  <name>force_test</name>
  <version>0.0.0</version>
  <description>The force_test package</description>

  <maintainer email="duud@todo.todo">duud</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
