<?xml version="1.0"?>
<package format="2">
  <name>puma01_control</name>
  <version>0.0.0</version>
  <description>The puma01_control package</description>

  <maintainer email="doodu@todo.todo">doodu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend>

  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>controller_interface</build_export_depend>
  <build_export_depend>forward_command_controller</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <!-- <build_export_depend>kdl_parser</build_export_depend> -->

  <exec_depend>control_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
     <controller_interface plugin="${prefix}/puma01_controllers_plugins.xml"/>

  </export>
</package>
