<?xml version="1.0"?>
<package format="2">
  <name>vscan_usbcan_api</name>
  <version>1.0.0</version>
  <description>Package contains VSCAN USB-CAN Plus adapter API for Linux x86-64 (C++ implementation).</description>

  <maintainer email="doodoodude@todo.todo">doodoodude</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
